--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,3 +4,15 @@
   margin: 0 auto;
   padding-bottom: 24px;
 }
+
+@media (max-width: 1024px) {
+  .footer {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 544px) {
+  .footer {
+    font-size: 14px;
+  }
+}
