--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -75,4 +75,30 @@
 @media (max-width: 544px) {
   .intro {
     width: 90%;
-   
+    height: auto;
+    margin: 0 auto;
+  }
+
+  .intro__title {
+    font-size: 32px;
+    width: 288px;
+    height: 175px;
+    line-height: 35px;
+  }
+
+  .intro__quote {
+    width: 288px;
+    height: 300px;
+    line-height: 1.2;
+  }
+
+  .intro__quote-author {
+    width: 461px;
+  }
+
+  .intro__text {
+    font-size: 16px;
+    width: 400px;
+    height: 440px;
+  }
+}
