--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,34 +1,34 @@
 .header {
-  text-align: center;
+  margin: auto;
 }
 
 .header__logo {
   width: 254px;
   height: 68px;
   padding-top: 34px;
-  padding-left: 517px;
-  padding-right: 490px;
+  margin: 0 auto;
+  display: block;
   padding-bottom: 91px;
 }
 
 .header__title {
-  width: 720px;
-  height: 200px;
+  max-width: 720px;
   margin: 0 auto;
   font-size: 96px;
   font-weight: 900;
   line-height: 100px;
   padding-bottom: 32px;
+  text-align: center;
 }
 
 .header__subtitle {
-  width: 720px;
-  height: 72px;
+  max-width: 720px;
   margin: 0 auto;
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
   padding-bottom: 64px;
+  text-align: center;
 }
 
 @media (max-width: 1024px) {
@@ -37,14 +37,12 @@
   }
 
   .header__title {
-    width: 530px;
-    height: 158px;
+    max-width: 530px;
     line-height: 79px;
     font-size: 75px;
   }
 
   .header__subtitle {
-    width: 720px;
     font-size: 30px;
   }
 }
@@ -57,14 +55,10 @@
   .header__title {
     font-size: 40px;
     line-height: 1.2;
-    width: 288px;
-    height: 88px;
-    align-content: center;
+    max-width: 288px;
   }
 
   .header__subtitle {
-    width: 288px;
-    height: 40px;
     font-size: 16px;
     line-height: 1.2;
   }
