--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,29 +1,23 @@
 .intro {
-  width: 830px;
-  height: 607px;
-  margin: 0 auto 0 440px;
+  max-width: 984px;
+  margin: 0 auto;
 }
 
 .intro__title {
-  height: 173px;
+  max-width: 738px;
   font-weight: 900;
   font-size: 54px;
-  line-height: 58px;
-  text-align: left;
+  line-height: 53px;
 }
 
 .intro__quote {
-  width: 738px;
-  height: 135px;
+  max-width: 738px;
   font-weight: 400;
   font-size: 24px;
   line-height: 34px;
-  text-align: left;
 }
 
 .intro__quote-author {
-  width: 732px;
-  height: 33px;
   font-weight: 400;
   font-size: 24px;
   line-height: 34px;
@@ -33,72 +27,44 @@
 }
 
 .intro__text {
-  width: 722px;
-  height: 181px;
+  max-width: 722px;
   padding-top: 32px;
   font-weight: 400;
   font-size: 16px;
   line-height: 163%;
-  text-align: left;
 }
 
 @media (max-width: 1024px) {
   .intro {
     width: 90%;
-    height: auto;
     margin: 0 auto;
   }
 
   .intro__title {
     font-size: 45px;
-    width: 707px;
-    height: 147px;
     line-height: 49px;
   }
 
   .intro__quote {
     font-size: 24px;
-    width: 800px;
-    height: 136px;
-  }
-
-  .intro__quote-author {
-    width: 800px;
   }
 
   .intro__text {
     font-size: 16px;
-    width: 800px;
   }
 }
 
 @media (max-width: 544px) {
-  .intro {
-    width: 90%;
-    height: auto;
-    margin: 0 auto;
-  }
-
   .intro__title {
     font-size: 32px;
-    width: 288px;
-    height: 175px;
     line-height: 35px;
   }
 
   .intro__quote {
-    width: 288px;
-    height: 300px;
     line-height: 1.2;
-  }
-
-  .intro__quote-author {
-    width: 461px;
   }
 
   .intro__text {
     font-size: 16px;
-    width: 400px;
-    height: 440px;
   }
 }
