--- a/blocks/place.css
+++ b/blocks/place.css
@@ -9,7 +9,7 @@
 
 .place__title {
   font-size: 70px;
-  max-width: 100%; /*cambio*/
+  max-width: 100%;
   margin: 0;
   align-self: center;
   justify-self: center;
@@ -33,7 +33,7 @@
   width: 100%;
   height: auto;
   border-radius: 5px;
-  box-shadow: 5px 5px 5px #00000040;
+  box-shadow: 10px 10px 25px 0px rgba(0, 0, 0, 0.5);
   transition: filter 0.3s ease;
   object-fit: cover;
 }
@@ -51,8 +51,8 @@
 
 .place__button {
   color: #ffffff;
-  background-image: linear-gradient(to right, #0278fe, #003a7b);
-  box-shadow: 5px 5px 5px #00000040;
+  background-image: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   text-decoration: none;
   border-radius: 2px;
   width: 250px;
@@ -61,8 +61,11 @@
 }
 
 .place__button:hover {
-  background-image: none;
-  background-color: #003366;
+  background-image: linear-gradient(
+    90deg,
+    rgba(2, 120, 254, 0.25) 0%,
+    rgba(0, 58, 123, 0.25) 99.98%
+  );
 }
 
 @media (max-width: 1024px) {
